fixed spacing

--- a/public/style.css
+++ b/public/style.css
@@ -78,3 +78,8 @@ button {
 button:hover {
   opacity: 0.8;
 }
+
+a{
+  margin-left: 5px;
+  color: blue;
+}
